--- a/style/style.css
+++ b/style/style.css
@@ -27,19 +27,20 @@ body {
   bottom: 10px;
   left: 10px;
   font-weight: bold;
-  font-size: 48px; }
+  font-size: 48px;
+  color: rgba(255, 255, 255, 0.2); }
 
 a {
-  color: gray;
+  color: #0099ff;
   text-decoration: none; }
   a:hover {
     color: #00ccf0; }
 
 #info {
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
   position: absolute;
   padding: 20px;
   top: 0px;
@@ -59,7 +60,7 @@ a {
   position: absolute;
   padding: 15px 10px 10px;
   right: -50px;
-  top: 10px;
+  top: 0;
   width: 50px;
   height: 50px;
   background-color: #606060;
@@ -69,10 +70,10 @@ a {
     color: #00ccff; }
 
 #main {
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
   position: absolute; }
   #main.home {
     left: 0; }
