--- a/style/style.sass
+++ b/style/style.sass
@@ -19,14 +19,15 @@ body
 	left: 10px
 	font-weight: bold
 	font-size: 48px
+	color: rgba(255, 255, 255, 0.2)
 a 
-	color: #808080
+	color: #0099FF
 	text-decoration: none
 	&:hover  
 		color: #00cCF0
 
 #info 
-	+transition(0.3s)
+	+transition(0.5s, cubic-bezier(0.23, 1, 0.32, 1))
 	position: absolute
 	padding: 20px
 	top: 0px
@@ -48,7 +49,7 @@ a
 	position: absolute
 	padding: 15px 10px 10px
 	right: -50px
-	top: 10px
+	top: 0
 	width: 50px
 	height: 50px
 	background-color: #606060
@@ -57,7 +58,7 @@ a
 		background-color: #404040
 		color: #00CCFF
 #main
-	+transition(0.3s)
+	+transition(0.5s, cubic-bezier(0.23, 1, 0.32, 1))
 	position: absolute
 	&.home
 		left: 0
